perzhanitsa/compiler/VecLangParser.py
# Generated from VecLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO



class VecLangParser ( Parser ):

    grammarFileName = "VecLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'def'", "'if'", "'else'", "'while'", 
                     "'until'", "'for'", "'in'", "'switch'", "'case'", "'default'", 
                     "'return'", "'write'", "'print'", "'read'", "'raise'", 
                     "'true'", "'false'", "'vector'", "'matrix'", "'int'", 
                     "'float'", "'string'", "'auto'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'and'", "'or'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'|'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "';'", "':'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "DEF", "IF", "ELSE", "WHILE", 
                      "UNTIL", "FOR", "IN", "SWITCH", "CASE", "DEFAULT", 
                      "RETURN", "WRITE", "PRINT", "READ", "RAISE", "TRUE", 
                      "FALSE", "VECTOR", "MATRIX", "INT_TYPE", "FLOAT_TYPE", 
                      "STRING_TYPE", "AUTO", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "AND", "OR", "ASSIGN", "ADD", "SUB", "MUL", 
                      "DIV", "PIPE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "COMMA", "SEMI", "COLON", "DOT", 
                      "STRING", "FLOAT", "INT", "ID", "WS", "COMMENT", "ML_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_ifStatement = 3
    RULE_whileStatement = 4
    RULE_forStatement = 5
    RULE_switchStatement = 6
    RULE_block = 7
    RULE_functionDecl = 8
    RULE_parameterList = 9
    RULE_type = 10
    RULE_expression = 11
    RULE_equalityExpr = 12
    RULE_relationalExpr = 13
    RULE_additiveExpr = 14
    RULE_multiplicativeExpr = 15
    RULE_logicalExpr = 16
    RULE_unaryExpr = 17
    RULE_postfixExpr = 18
    RULE_primary = 19
    RULE_argument = 20
    RULE_argumentList = 21
    RULE_literal = 22
    RULE_vectorLiteral = 23
    RULE_matrixLiteral = 24
    RULE_row = 25
    RULE_writeStatement = 26
    RULE_printStatement = 27
    RULE_readStatement = 28
    RULE_returnStatement = 29
    RULE_raiseStatement = 30

    ruleNames =  [ "program", "statement", "assignment", "ifStatement", 
                   "whileStatement", "forStatement", "switchStatement", 
                   "block", "functionDecl", "parameterList", "type", "expression", 
                   "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "logicalExpr", "unaryExpr", "postfixExpr", "primary", 
                   "argument", "argumentList", "literal", "vectorLiteral", 
                   "matrixLiteral", "row", "writeStatement", "printStatement", 
                   "readStatement", "returnStatement", "raiseStatement" ]

    EOF = Token.EOF
    T__0=1
    DEF=2
    IF=3
    ELSE=4
    WHILE=5
    UNTIL=6
    FOR=7
    IN=8
    SWITCH=9
    CASE=10
    DEFAULT=11
    RETURN=12
    WRITE=13
    PRINT=14
    READ=15
    RAISE=16
    TRUE=17
    FALSE=18
    VECTOR=19
    MATRIX=20
    INT_TYPE=21
    FLOAT_TYPE=22
    STRING_TYPE=23
    AUTO=24
    EQ=25
    NEQ=26
    LE=27
    GE=28
    LT=29
    GT=30
    AND=31
    OR=32
    ASSIGN=33
    ADD=34
    SUB=35
    MUL=36
    DIV=37
    PIPE=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    LBRACK=43
    RBRACK=44
    COMMA=45
    SEMI=46
    COLON=47
    DOT=48
    STRING=49
    FLOAT=50
    INT=51
    ID=52
    WS=53
    COMMENT=54
    ML_COMMENT=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VecLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(VecLangParser.StatementContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(VecLangParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return VecLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VecLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8453904389894830) != 0):
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 3, 5, 7, 9, 12, 13, 14, 15, 16, 17, 18, 19, 20, 35, 38, 39, 43, 49, 50, 51, 52]:
                    self.state = 62
                    self.statement()
                    pass
                elif token in [2]:
                    self.state = 63
                    self.functionDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(VecLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(VecLangParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(VecLangParser.ExpressionContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(VecLangParser.PrintStatementContext,0)


        def writeStatement(self):
            return self.getTypedRuleContext(VecLangParser.WriteStatementContext,0)


        def readStatement(self):
            return self.getTypedRuleContext(VecLangParser.ReadStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(VecLangParser.ReturnStatementContext,0)


        def raiseStatement(self):
            return self.getTypedRuleContext(VecLangParser.RaiseStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(VecLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(VecLangParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(VecLangParser.ForStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(VecLangParser.SwitchStatementContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = VecLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.printStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.writeStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.readStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.raiseStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 78
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 79
                self.whileStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 80
                self.forStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 81
                self.switchStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VecLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(VecLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(VecLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = VecLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 84
                self.match(VecLangParser.T__0)


            self.state = 87
            self.match(VecLangParser.ID)
            self.state = 88
            self.match(VecLangParser.ASSIGN)
            self.state = 89
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(VecLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(VecLangParser.ExpressionContext,0)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(VecLangParser.COLON)
            else:
                return self.getToken(VecLangParser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(VecLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(VecLangParser.ELSE, 0)

        def getRuleIndex(self):
            return VecLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = VecLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(VecLangParser.IF)
            self.state = 92
            self.expression()
            self.state = 93
            self.match(VecLangParser.COLON)
            self.state = 94
            self.block()
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 95
                self.match(VecLangParser.ELSE)
                self.state = 96
                self.match(VecLangParser.COLON)
                self.state = 97
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(VecLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(VecLangParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(VecLangParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(VecLangParser.BlockContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = VecLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(VecLangParser.WHILE)
            self.state = 101
            self.expression()
            self.state = 102
            self.match(VecLangParser.COLON)
            self.state = 103
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(VecLangParser.FOR, 0)

        def ID(self):
            return self.getToken(VecLangParser.ID, 0)

        def IN(self):
            return self.getToken(VecLangParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(VecLangParser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(VecLangParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(VecLangParser.BlockContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = VecLangParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(VecLangParser.FOR)
            self.state = 106
            self.match(VecLangParser.ID)
            self.state = 107
            self.match(VecLangParser.IN)
            self.state = 108
            self.expression()
            self.state = 109
            self.match(VecLangParser.COLON)
            self.state = 110
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(VecLangParser.SWITCH, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(VecLangParser.ExpressionContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(VecLangParser.COLON)
            else:
                return self.getToken(VecLangParser.COLON, i)

        def CASE(self, i:int=None):
            if i is None:
                return self.getTokens(VecLangParser.CASE)
            else:
                return self.getToken(VecLangParser.CASE, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(VecLangParser.BlockContext,i)


        def DEFAULT(self):
            return self.getToken(VecLangParser.DEFAULT, 0)

        def getRuleIndex(self):
            return VecLangParser.RULE_switchStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStatement" ):
                listener.enterSwitchStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStatement" ):
                listener.exitSwitchStatement(self)




    def switchStatement(self):

        localctx = VecLangParser.SwitchStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_switchStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(VecLangParser.SWITCH)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(VecLangParser.COLON)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 115
                    self.match(VecLangParser.CASE)
                    self.state = 116
                    self.expression()
                    self.state = 117
                    self.match(VecLangParser.COLON)
                    self.state = 118
                    self.block() 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(VecLangParser.DEFAULT)
                self.state = 126
                self.match(VecLangParser.COLON)
                self.state = 127
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VecLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(VecLangParser.StatementContext,i)


        def getRuleIndex(self):
            return VecLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = VecLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 130
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 133 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(VecLangParser.DEF, 0)

        def ID(self):
            return self.getToken(VecLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(VecLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(VecLangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(VecLangParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(VecLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(VecLangParser.ParameterListContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = VecLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(VecLangParser.DEF)
            self.state = 136
            self.match(VecLangParser.ID)
            self.state = 137
            self.match(VecLangParser.LPAREN)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1 or _la==52:
                self.state = 138
                self.parameterList()


            self.state = 141
            self.match(VecLangParser.RPAREN)
            self.state = 142
            self.match(VecLangParser.COLON)
            self.state = 143
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VecLangParser.ID)
            else:
                return self.getToken(VecLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(VecLangParser.COMMA)
            else:
                return self.getToken(VecLangParser.COMMA, i)

        def getRuleIndex(self):
            return VecLangParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = VecLangParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 145
                self.match(VecLangParser.T__0)


            self.state = 148
            self.match(VecLangParser.ID)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 150
                self.match(VecLangParser.COMMA)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 151
                    self.match(VecLangParser.T__0)


                self.state = 154
                self.match(VecLangParser.ID)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VECTOR(self):
            return self.getToken(VecLangParser.VECTOR, 0)

        def MATRIX(self):
            return self.getToken(VecLangParser.MATRIX, 0)

        def INT_TYPE(self):
            return self.getToken(VecLangParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(VecLangParser.FLOAT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(VecLangParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return VecLangParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = VecLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16252928) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpr(self):
            return self.getTypedRuleContext(VecLangParser.EqualityExprContext,0)


        def logicalExpr(self):
            return self.getTypedRuleContext(VecLangParser.LogicalExprContext,0)


        def getRuleIndex(self):
            return VecLangParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = VecLangParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.equalityExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.logicalExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
